Fix form alignment on large screens

--- a/css/forms.css
+++ b/css/forms.css
@@ -18,14 +18,14 @@
 }
 
 .avatar{
-    width: 30%;
-    height: 30%;
+    width: 25%;
+    height: 25%;
     margin-left: 40%;
 
 }
 
 .register .white_box{
-    width: 60%;
+   
     color: #ffffff;
     background: rgba(26, 25, 25, 0.527);
     box-sizing: border-box;
@@ -114,10 +114,11 @@
 
 .user_dits{
     text-align: center;
+    
 }
 
 .user_dits label{
-    display:inline-block;
+    display: block;
     margin: 8px 70px;
 }
 
